# scikit-learn-intelex

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .travis.yml  1.23.5  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  SUPPORT.md  _clang-format  acceleration.html  algorithms.html  azure-pipelines.yml  blogs.html  contents.html  contribute.html  data.html  dependencies-dev  deprecation.html  deselected_tests.yaml  distributed-mode.html  dpcppcompiler.py  examples.html  gen.py  genindex.html  get_started.html  global-patching.html  global_patching.html  gpu.html  index.html  installation.html  kaggle.html  license.html  log_valgrind  (+39 more)
.ci/: Release.yml
.circleci/: compare_runs.py  config.yml  deselect_tests.py  run_and_compare.sh  run_xpu_tests.py  setup_env.sh
.github/: .codecov.yml  .licenserc.yaml  .mergify.yml  CODEOWNERS  Pull_Request_template.md  dependabot.yml  renovate.json
2023.2/: acceleration.html  algorithms.html  blogs.html  contribute.html  global-patching.html  index.html  installation.html  kaggle.html  memory-requirements.html  objects.inv  oneapi-gpu.html  quick-start.html  releases.html  search.html  searchindex.js  support.html
2024.3/: .buildinfo  404.html  algorithms.html  blogs.html  contribute.html  deprecation.html  distributed-mode.html  genindex.html  index.html  kaggle.html  license.html  objects.inv  oneapi-gpu.html  quick-start.html  samples.html  search.html  searchindex.js  support.html  tutorials.html  verbose.html
2024.6/: .buildinfo  404.html  algorithms.html  blogs.html  contribute.html  deprecation.html  distributed-mode.html  genindex.html  index.html  kaggle.html  license.html  objects.inv  oneapi-gpu.html  quick-start.html  samples.html  search.html  searchindex.js  support.html  tutorials.html  verbose.html
_modules/: index.html
_sources/: acceleration.rst.txt  algorithms.rst.txt  blogs.rst.txt  contents.rst.txt  data.rst.txt  examples.rst.txt  get_started.rst.txt  gpu.rst.txt  index.rst.txt  installation.rst.txt  kaggle.rst.txt  oneapi-gpu.rst.txt  scaling.rst.txt  sklearn.rst.txt  system_requirements.rst.txt  verbose.rst.txt  what-is-patching.rst.txt
_static/: agogo.css  basic.css  documentation_options.js  style.css
conda-recipe/: bld.bat  build.sh  conda_build_config.yaml  helper_mpi_tests.py  meta.yaml  run_test.bat  run_test.py  run_test.sh
conda-recipe-nodist/: bld.bat  build.sh  meta.yaml  run_test.py
daal4py/: INSTALL.md  README.md  __init__.py  __main__.py
dev/: CMakeLists.txt  build_backend.py  run_test.bat  run_test.sh
doc/: Makefile  README.md  algorithms.rst  build-doc.sh  conf.py  contents.rst  examples.rst  get_doc_version.py  getting_started.rst  index.html  index.rst  make.bat  requirements.txt  scaling.rst  set_version.sh  sklearn.rst  streaming.rst  third-party-programs-sklearnex.txt  verbose.rst  versions.json
examples/: README.md  XGBoost_Performance.ipynb  XGBoost_d4p_prediction.ipynb  adaboost_batch.py  adagrad_mse_batch.py  association_rules_batch.py  bacon_outlier_batch.py  bf_knn_classification_batch.py  brownboost_batch.py  cholesky_batch.py  correlation_distance_batch.py  cosine_distance_batch.py  covariance_batch.py  covariance_spmd.py  covariance_streaming.py  daal4py_data_science.ipynb  dbscan_batch.py  dbscan_spmd.py  decision_forest_classification_batch.py  decision_forest_classification_traverse_batch.py  decision_forest_model_builder.py  decision_forest_regression_batch.py  decision_forest_regression_default_dense_batch.py  decision_forest_regression_traverse_batch.py  decision_tree_classification_batch.py  decision_tree_classification_traverse_batch.py  decision_tree_regression_batch.py  decision_tree_regression_traverse_batch.py  distributions_bernoulli_batch.py  distributions_normal_batch.py  distributions_uniform_batch.py  elastic_net_batch.py  em_gmm_batch.py  gbt_classification_batch.py  gbt_cls_model_builder_for_lgbm  gbt_cls_model_create_from_lightgbm_batch.py  gbt_cls_model_create_from_xgboost_batch.py  gbt_cls_traversed_model_builder.py  gbt_regression_batch.py  gradient_boosted_classification.py  (+83 more)
generator/: format.py  gen_daal4py.py  parse.py  wrapper_gen.py  wrappers.py
guide/: acceleration.html
iskex/: README.md  __init__.py  __main__.py  dispatcher.py
kaggle/: automl.html  classification.html  regression.html
latest/: 404.html  deprecation.html  distributed-mode.html  genindex.html  license.html  samples.html  system-requirements.html  verbose.html  what-is-patching.html
onedal/: .clang-format  __init__.py  _base.py  _config.py  _device_offload.py  common.hpp  dal.cpp  modules.hpp  onedal.pyx  version.hpp
samples/: ElasticNet.html  dbscan.html  kmeans.html  knn_mnist.html  lasso_regression.html  lasso_regression.ipynb  linear_regression.html  logistictic_regression_cifar.html  logistictic_regression_cifar.ipynb  nusvr_medical_charges.html  nusvr_medical_charges.ipynb  random_forest_yolanda.html  ridge_regression.html  svc_adult.html
scripts/: CMakeLists.txt  bld.bat  build.sh  build_backend.py  package_helpers.py  run_test.bat  run_test.sh  version.py
scripts/generator/: _clang-format  gen.py  gen_daal4py.py  wrapper_gen.py
sklearnex/: __init__.py  __main__.py  _config.py  _device_offload.py  _utils.py  base.py  conftest.py  dispatcher.py  global_patching.py
src/: apply_gather.h  apply_gather_iter.h  cnc4daal.h  daal4py.cpp  daal4py.h  daal4py_defines.h  daal4py_dist.h  daal4py_version.h  daal_compat.h  df_model_builder.h  df_model_builder.pyx  dist_custom.h  dist_dbscan.h  dist_kmeans.h  dist_kmeans_init.h  dist_logistic_regression.h  dist_logistic_regression_training.h  dkmi.h  gbt_convertors-recursive-append.pyx  gbt_convertors.py  gbt_convertors.py.bak  gbt_convertors.pyx  gbt_model_builder.h  gbt_model_builder.pyx  gettree.pyx  lbfgs.cpp  log_reg_model_builder.h  log_reg_model_builder.pyx  map_reduce.h  map_reduce_graph.h  map_reduce_iter.h  map_reduce_star.h  map_reduce_star_plus.h  map_reduce_tree.h  modelbuilder.h  modelbuilder.pyx  mpi4daal.h  npy4daal.h  (+8 more)
(+1597 files in other folders)
